--- a/app/views/partials/_add_payload.erb
+++ b/app/views/partials/_add_payload.erb
@@ -1,7 +1,7 @@
-<tr class='load_input'>
+<tr class='payload_input'>
   <td><input type="text" name="vehicle[][vehicle_name]" placeholder="loaded vehicle"></td>
 
-  <td><textarea name="loads[][load]">Load List</textarea></td>
+  <td><textarea name="payloads[][payload]">Load List</textarea></td>
 </tr>
 
 
