--- a/app/views/partials/_add_payload.erb
+++ b/app/views/partials/_add_payload.erb
@@ -1,8 +1,9 @@
-<tr class='payload_input'>
-  <td><input type="text" name="vehicle[][vehicle_name]" placeholder="loaded vehicle"></td>
-
-  <td><textarea name="payloads[][payload]">Load List</textarea></td>
-</tr>
+<div class="panel-body">
+	<div class="form-group">
+		<input type="text" name="payloads[][vehicle_name]" placeholder="loaded vehicle">
+		<textarea name="payloads[][payload]">Load List</textarea>
+	</div>
+</div>
 
 
 
